content/css/style.css
/* general */

html, body{

    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: 0;

    overflow-x: hidden;
    -ms-overflow-style: none;
    scrollbar-width: none;

    fill: #fff;
    color: #fff;
    background-color: #252526;
}

::-webkit-scrollbar{
    display:none;
}

a {
    text-decoration: none;
    font-weight: 600;
}

ul {
    padding-left: 0;
}

ul li {
    margin-bottom: 15px;
    list-style: none;
}

ol, ul {
    margin: 1em 0;
    padding: 0 0 0 40px;
}

ul {
    display: block;
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    padding-inline-start: 40px;
}

p {
    display: block;
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
}

hr {
    position: static;
    margin: auto;
    width: 10em;
    
}

.divider {
    background-image: linear-gradient(-285deg,#4d4d50 20%, #252526 80%,#4d4d50 100%);
    transform: skewY(-6deg);
    height: 1px;
    width: 100%;
    margin: 60px 0;
}

h1, h2, h3{
    font-family: Oxygen, sans-serif;
}

svg {
    color: #fff;
    fill: #fff;
}

/* splash */

.splash{
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    background: #252526;
    z-index: 200;
    color: white;
    text-align: left;
    
}


.splash.display-none{
    opacity: 0;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    background: #252526;
    z-index: -10;
    color: white;
    text-align: left;
    transition: all 0.5s;
}

.splash-logo{
    padding-top: 30px
}

@keyframes fadeIn {
    to{
        opacity: 1;
    }
}

.fade-in{
    opacity: 0;
    animation: fadeIn 1s ease-in forwards
}

/* header */

.nav-wrapper{
    background: linear-gradient(to bottom, #19191a 10%, #252526);
}

nav {
    padding-top: 32px;
    max-width: 940px;
    margin: 0 auto;
    display: grid;
    grid-template-columns: 80px 1fr;
}

#brand svg{
    color: #fff;
    stroke: #fff;
    fill: #ffffff00 !important;
    stroke-width: 5px;

}

#brand svg:hover{
    color: orange;
    stroke: orange;

}

nav #social li{
    float: left;
    margin-left: 12px;
}

nav #social button{
    width: 24px;
    height: 24px;
    display: in-line-block;
    padding: 8px 12px;
}

nav #social li a{
    width: 24px;
    height: 24px;
    display: in-line-block;
}

nav a {
    padding: 8px 12px;
}

nav #social {
    justify-self: right;
    padding: 30px 20px;
}

nav ol, nav ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

#brand:hover{
    color: orange;
    fill: orange;
    stroke: orange;
}

#linkedin:hover{
    color:  #2867B2;
    fill:  #2867B2;
    stroke:  #2867B2;
}

#github:hover{
    color: #c9510c;
    fill: #c9510c;
    stroke: #c9510c;
}

#dribbble:hover{
    color: #ea4c89;
    fill: #ea4c89;
    stroke: #ea4c89;
}

/* hero */

#hero{
    height: calc(100vh - 260px);
    position: relative;
    align-items: center;
    display: grid;

    max-width: 700px;
    margin: 0 auto;
    grid-template-columns: 1fr;

    background-image: url(../images/heroBG.svg);
    background-repeat: no-repeat;
    background-position: center;
    background-size: 350px;
    background-position: absolute;
}

.content{
    max-width: 700px;
    margin: 0px auto;
    padding: 0px 40px 0px;
    padding-top: 50px;
    grid-template-columns: 1fr;
    width: auto;
} 


.text{
    text-align: center;
    font-family: Roboto, sans-serif;
}

.title{
    line-height: 54px;
    font-family: Oxygen, sans-serif;
    font-size: 45px;
    font-weight: 3000;
    letter-spacing: -.34px;
}

.colorTitle{
    color: orange;
}

.subtitle {
    font-family: Oxygen, sans-serif;
    font-size: 20px;
    color: orange;
}

.p{
    font-family: Roboto, sans-serif;
    font-size: 16px;
    line-height: 30px;
    margin-bottom: 44px;
}

#home-p{
    font-family: Roboto, sans-serif;
    font-size: 16px;
    line-height: 30px;
    margin-bottom: 44px;
    max-width: 500px;
}

.link{
    font-family: Oxygen, sans-serif;
    color: orange;
}

.link:hover, .link:visited{
    color: rgba(255, 166, 0, 0.712);
}

.button{
    color: white;
    background-color: orange;
    padding: 15px 24px 17px;
    font-size: 16px;
    font-family: Roboto, sans-serif;
    text-align: center;
    border-radius: 5px;
    line-height: 16px;
    opacity: 0.8;
    display: inline-block;
    margin-bottom: 24px;
}

.button:hover{
    background-color: rgba(255, 166, 0, 0.712);
    cursor: pointer;
}

.button-link{
    color: white;
    font-family: Roboto, sans-serif;
}

/* about */

.about-wrapper{
    text-align: left;

    height: calc(100vh - 260px);
    position: relative;
    align-items: center;
    display: grid;

    padding-bottom: 100px;

    margin: 0 auto;
    grid-template-columns: 1fr;

}

.about-pfp{
    display: block;
    border-radius: 50%;
    height: 300px;
    width:  280px;
    position: relative;
}

.subscript{
  font-size: 15px;
  font-family: Roboto, sans-serif;  
  line-height: 0.5em;
}

.block-list li{
    background:  #323234;
    color: #fafafa;
    display: inline-block;
    margin: .25em;
    padding: .25em .5em;
    position: relative;
    font-family: Oxygen, sans-serif;
    line-height: 0.7em;
}

.block-list li:hover{
    background: orange;
    color: black;
}


/*about slideshow*/

.slideshow-container{
    max-width: 900px;
    position: relative;
    margin: auto;
}

.slide{
    display: none;
}

.prev, .next{
    cursor: pointer;
    position: absolute;
    display: flex;
    top: 35vh;
    width: auto;
    margin-top: -22px;
    padding: 16px;
    color: white;
    font-weight: bold;
    font-size: 18px;
    transition: 0.6 ease;
    border-radius: 0 3px 3px 0;
    user-select: none;


}

.next{
    right: 0;
    border-radius: 3px 0 0 3px;
}

.prev:hover, .next:hover{
    color: orange;
}

.slide-fade{
    -webkit-animation-name: fade;
    -webkit-animation-duration: 1.5s;
    animation-name: fade;
    animation-duration: 1.5s;
}

.slide-visible{
    display: block;
}

@-webkit-keyframes fade {
    from {opacity : .4}
    to {opacity: 1}
}

@keyframes fade{
    from {opacity: .4}
    to {opacity: 1}
}

/* courses */

#courses-wrapper{
    text-align: left;

    height: calc(100vh);
    position: relative;
    align-items: center;
    display: grid;
    margin: auto;

    max-width: 700px;
    margin: 0 auto;
    grid-template-columns: 1fr; 
}


/* footer */

footer {
    display: grid;
    font-size: 14px;
}

footer p {
    max-width: 700px;
    margin: 0 auto;
    display: grid;
    font-size: 14px;
    text-align: left;
    letter-spacing: .36px;
    font-family: Roboto, sans-serif;
}

.contact-wrapper{
    width: 100%;
    grid-template-columns: 450px 450px;
    display: grid;
    margin: 0 auto;

    height: calc(100vh);
    position: relative;
    align-items: center;
    max-width: 900px;

}

.footer-background{
    background:linear-gradient(to bottom, #252526, #19191a);
}

.footer-grid{
    text-align: left;
    height: calc(100vh - 260px);
    padding: 50px 40px 0px;
}


#map{
    width: 300px;
    height: 350px;
    margin: 0 auto;
    border-style: solid black;
    border-radius: 5px;
}


/* light mode */

.light{
    color: #494949;
    background: #e4e4e4;
}

.light svg{
    color: #494949;
    fill: #494949;

}

.light .colorTitle{
    color: #fd5e53
}

.light abbr{
    color: #fd5e53;
}

.light .link{
    color: #fd5e53;
}

.light .button{
    background: #fd5e53;

}

.light .divider{
    background-image: linear-gradient(-285deg,#c2c2c2 20%, #e4e4e4 80%,#c2c2c2 100%);
    transform: skewY(-6deg);
    height: 1px;
    width: 100%;
    margin: 60px 0;
}

.light .footer-background{
    background:linear-gradient(to bottom, #e4e4e4, #acacac);
}

.light .nav-wrapper{
    background:linear-gradient(to top, #e4e4e4, #b9b9b9);
}

.light #brand svg{
    stroke: #494949;
    fill: #ffffff00 !important;
    stroke-width: 5px;
}

.light #brand svg:hover{
    color: #fd5e53;
    stroke: #fd5e53;
}

.light .block-list li{
    background: #727272;
    color: #fff;
}

.light .block-list li:hover{
    background: #fd5e53;
}

.light #hero{
    background-image: url(../images/lightHeroBG.svg);
    background-repeat: no-repeat;
    background-position: center;
    background-size: 350px;
    background-position: absolute;
}

.light .prev, .light .next{
    color:#727272;
}

#mode #moon{
    display: none;
}

#sun{
    width: 30px !important;
    height: 30px !important;
}

